--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8674,205 +8674,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #3dd9b1; }
+  background: #b8b01d; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #16dfdf; }
+  background: #b64da7; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #36932e; }
+  background: #436b34; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #33f669; }
+  background: #500850; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #2ce313; }
+  background: #5fba44; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #2d2ac8; }
+  background: #2b7a63; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #d18c97; }
+  background: #7548d2; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #71c72c; }
+  background: #77f097; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #46b142; }
+  background: #c82a13; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #783809; }
+  background: #d6ef12; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #045aed; }
+  background: #986861; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #f5b8b2; }
+  background: #572f95; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #9deffc; }
+  background: #31eadc; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d12f7c; }
+  background: #bebe76; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #c95231; }
+  background: #5e0cce; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #aa37ec; }
+  background: #b5c3a4; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c87805; }
+  background: #3f9ecb; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #c0a54d; }
+  background: #fd2784; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e16651; }
+  background: #cf1390; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f165e7; }
+  background: #466633; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #762bcf; }
+  background: #375736; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #81caf6; }
+  background: #bbd197; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #5bb409; }
+  background: #10a205; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7d4dd9; }
+  background: #d0ee48; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #c0decd; }
+  background: #21b967; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #04e98b; }
+  background: #8538e6; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #30d16b; }
+  background: #1ed446; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #678df8; }
+  background: #217b9c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #b23f69; }
+  background: #676a8e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #ddc273; }
+  background: #07a38d; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #4cb17e; }
+  background: #9a14bb; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #a77515; }
+  background: #db570f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #87bf64; }
+  background: #093801; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #af310b; }
+  background: #92ba64; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #96781c; }
+  background: #4bb947; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e776a1; }
+  background: #31b23b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #bb1708; }
+  background: #cc23ac; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #b2fb20; }
+  background: #e7e2bd; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f2f87c; }
+  background: #92191d; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #36146b; }
+  background: #5b0ccc; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #3afec5; }
+  background: #dddda9; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #be0596; }
+  background: #27517b; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c5610b; }
+  background: #f9271c; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #f7abd4; }
+  background: #14ec1a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #be951a; }
+  background: #e995dc; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #490ca1; }
+  background: #78c2f7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #7e9514; }
+  background: #c20369; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #bbc258; }
+  background: #9510d8; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #7cdd7d; }
+  background: #902108; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c2c180; }
+  background: #a3ff3c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #1d7dda; }
+  background: #c5dcc0; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #3f748d; }
+  background: #154fdb; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #bdaebb; }
+  background: #14716a; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #9c388e; }
+  background: #da813f; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #6fdd38; }
+  background: #ddc198; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #57f162; }
+  background: #45b8b6; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #ffaf89; }
+  background: #537392; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #69deac; }
+  background: #ee5443; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #0dc38d; }
+  background: #d77008; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f9578c; }
+  background: #b87f1b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #fd161e; }
+  background: #093601; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #456b08; }
+  background: #95b2f8; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #398718; }
+  background: #569a0d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #d06a1d; }
+  background: #6fad98; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #d690d7; }
+  background: #bd3e4a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #85686f; }
+  background: #f24350; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #445692; }
+  background: #856544; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9bf83f; }
+  background: #40a256; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #4cc04c; }
+  background: #c7928e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #f22a9c; }
+  background: #07c8b3; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #eb6ee5; }
+  background: #d51430; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #a5065a; }
+  background: #aaa197; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #262d1a; }
+  background: #0d50b2; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #74d7f9; }
+  background: #daa6c3; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #277b31; }
+  background: #ceba6e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #10fd9b; }
+  background: #dd0652; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f941f2; }
+  background: #fb9ec7; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #8c4cff; }
+  background: #67c5bf; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #b10f9b; }
+  background: #21070a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #cdeff4; }
+  background: #c1778f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #cd3ad0; }
+  background: #3c59d1; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #f2dc30; }
+  background: #93f4bd; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b454ec; }
+  background: #6dc14a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #627ee6; }
+  background: #fa1078; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ff8512; }
+  background: #0d4ecf; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #fcbd59; }
+  background: #11eeb7; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #8d221b; }
+  background: #2c8b4f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #6ab73e; }
+  background: #94b90c; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f6cfa1; }
+  background: #942fe8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #2d4f04; }
+  background: #901701; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #5df796; }
+  background: #9dd437; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #5ce459; }
+  background: #6b382d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #032e78; }
+  background: #7a9bae; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ba09e4; }
+  background: #c2dd11; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f2b004; }
+  background: #644d6a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #07a657; }
+  background: #3616b1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #aa8278; }
+  background: #99dbb8; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #e33884; }
+  background: #ffb090; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4d3bad; }
+  background: #982ce8; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #1113c1; }
+  background: #268ca9; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11963,7 +11963,7 @@ input:checked + .sliders:before {
     background-position-x: 12px;
     background-position-y: 13px;
     width: auto;
-    top: -2px;
+    top: -6px;
     left: 0px;
     margin: 0px;
     z-index: 3; }
