--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8674,205 +8674,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b8b01d; }
+  background: #b57976; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #b64da7; }
+  background: #0403d2; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #436b34; }
+  background: #38f0d1; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #500850; }
+  background: #a41851; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #5fba44; }
+  background: #ec38d8; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #2b7a63; }
+  background: #bc6029; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #7548d2; }
+  background: #06d1a8; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #77f097; }
+  background: #378d1f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c82a13; }
+  background: #d3954b; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #d6ef12; }
+  background: #414903; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #986861; }
+  background: #7c1e9e; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #572f95; }
+  background: #5e5fe4; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #31eadc; }
+  background: #aa0c1f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #bebe76; }
+  background: #3d73bf; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #5e0cce; }
+  background: #069957; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #b5c3a4; }
+  background: #c92390; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #3f9ecb; }
+  background: #0f61e1; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #fd2784; }
+  background: #165728; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #cf1390; }
+  background: #a668cc; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #466633; }
+  background: #b53356; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #375736; }
+  background: #563436; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #bbd197; }
+  background: #cec48f; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #10a205; }
+  background: #3b9f9a; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d0ee48; }
+  background: #1be3ad; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #21b967; }
+  background: #c8c477; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #8538e6; }
+  background: #c0b712; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #1ed446; }
+  background: #e27120; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #217b9c; }
+  background: #5c6422; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #676a8e; }
+  background: #b601db; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #07a38d; }
+  background: #4ea462; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #9a14bb; }
+  background: #09fd8b; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #db570f; }
+  background: #1ef641; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #093801; }
+  background: #dd1005; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #92ba64; }
+  background: #5ca159; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #4bb947; }
+  background: #f1c567; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #31b23b; }
+  background: #6d7d57; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #cc23ac; }
+  background: #4534eb; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e7e2bd; }
+  background: #4b5e8a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #92191d; }
+  background: #093793; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5b0ccc; }
+  background: #a4b381; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #dddda9; }
+  background: #1f29ea; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #27517b; }
+  background: #9b544a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f9271c; }
+  background: #f7461a; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #14ec1a; }
+  background: #589252; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #e995dc; }
+  background: #ac65ed; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #78c2f7; }
+  background: #6cd431; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c20369; }
+  background: #edf58b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #9510d8; }
+  background: #2c0a87; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #902108; }
+  background: #a5413c; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a3ff3c; }
+  background: #2658a9; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #c5dcc0; }
+  background: #8216de; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #154fdb; }
+  background: #c772e7; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #14716a; }
+  background: #a28a74; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #da813f; }
+  background: #0a48d4; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #ddc198; }
+  background: #a805c0; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #45b8b6; }
+  background: #dbf6bd; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #537392; }
+  background: #7992f2; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ee5443; }
+  background: #75c8b7; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d77008; }
+  background: #b5b988; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #b87f1b; }
+  background: #2e2526; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #093601; }
+  background: #34156b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #95b2f8; }
+  background: #351f50; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #569a0d; }
+  background: #d02c48; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #6fad98; }
+  background: #980c43; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #bd3e4a; }
+  background: #4567fd; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f24350; }
+  background: #a2e71d; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #856544; }
+  background: #a91a30; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #40a256; }
+  background: #04ca4a; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #c7928e; }
+  background: #ca650a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #07c8b3; }
+  background: #62b616; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d51430; }
+  background: #a54e8a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #aaa197; }
+  background: #f3a997; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #0d50b2; }
+  background: #8d9f66; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #daa6c3; }
+  background: #a5a4f5; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ceba6e; }
+  background: #cc1636; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #dd0652; }
+  background: #05d5e9; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #fb9ec7; }
+  background: #821d6e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #67c5bf; }
+  background: #3a66c9; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #21070a; }
+  background: #b41bc9; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c1778f; }
+  background: #93f220; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #3c59d1; }
+  background: #717352; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #93f4bd; }
+  background: #e68f40; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #6dc14a; }
+  background: #ec6b51; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #fa1078; }
+  background: #bb7c78; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #0d4ecf; }
+  background: #87c231; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #11eeb7; }
+  background: #2b3c34; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #2c8b4f; }
+  background: #cfa8a6; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #94b90c; }
+  background: #1cfb17; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #942fe8; }
+  background: #7ac920; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #901701; }
+  background: #08c569; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #9dd437; }
+  background: #e262af; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6b382d; }
+  background: #02617d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #7a9bae; }
+  background: #ade5a1; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #c2dd11; }
+  background: #f5e688; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #644d6a; }
+  background: #c271a7; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #3616b1; }
+  background: #f222b5; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #99dbb8; }
+  background: #a13df8; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ffb090; }
+  background: #a2a680; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #982ce8; }
+  background: #9e1bf0; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #268ca9; }
+  background: #77e014; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9192,7 +9192,7 @@ th {
       left: 12px; }
     .dashboard-top-section-query .search-wrap input {
       width: 100%;
-      padding: 14px 10px;
+      padding: 10px 10px;
       border: 0px solid #bababa;
       padding-left: 40px; }
     .dashboard-top-section-query .search-wrap .search-query-dropdown-btn {
