--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7768,7 +7768,7 @@ header {
     justify-content: center;
     margin: 0px 0px;
     /* border: 1px solid; */
-    width: 91px;
+    width: 93px;
     text-align: center;
     align-items: center; }
     header .header-menu ul li:hover {
@@ -8674,205 +8674,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b57976; }
+  background: #2c5f2c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #0403d2; }
+  background: #1a079c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #38f0d1; }
+  background: #cf6374; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #a41851; }
+  background: #e76754; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #ec38d8; }
+  background: #65c15f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #bc6029; }
+  background: #c32273; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #06d1a8; }
+  background: #af8d8c; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #378d1f; }
+  background: #a8aedc; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #d3954b; }
+  background: #14d24c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #414903; }
+  background: #155d85; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #7c1e9e; }
+  background: #04d8a8; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #5e5fe4; }
+  background: #7690ec; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #aa0c1f; }
+  background: #50d915; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #3d73bf; }
+  background: #67cacf; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #069957; }
+  background: #6dbd38; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c92390; }
+  background: #085d68; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #0f61e1; }
+  background: #24f3a1; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #165728; }
+  background: #c75d47; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a668cc; }
+  background: #549307; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b53356; }
+  background: #14b82c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #563436; }
+  background: #63b68c; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #cec48f; }
+  background: #64ad73; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #3b9f9a; }
+  background: #5cc034; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #1be3ad; }
+  background: #696f3d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #c8c477; }
+  background: #ea3139; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c0b712; }
+  background: #45f62f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e27120; }
+  background: #66f79c; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5c6422; }
+  background: #5a72c0; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #b601db; }
+  background: #905652; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #4ea462; }
+  background: #6d9c4a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #09fd8b; }
+  background: #481c79; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #1ef641; }
+  background: #31fd20; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #dd1005; }
+  background: #459f87; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #5ca159; }
+  background: #0781bb; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #f1c567; }
+  background: #18b26e; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #6d7d57; }
+  background: #7c9c5b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #4534eb; }
+  background: #dfeac1; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #4b5e8a; }
+  background: #f59516; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #093793; }
+  background: #cbef95; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #a4b381; }
+  background: #1e08de; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #1f29ea; }
+  background: #735686; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #9b544a; }
+  background: #cfdd60; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f7461a; }
+  background: #91ddfa; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #589252; }
+  background: #3ec35c; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #ac65ed; }
+  background: #1a3592; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6cd431; }
+  background: #5551b3; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #edf58b; }
+  background: #49feae; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #2c0a87; }
+  background: #5ff6ba; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a5413c; }
+  background: #220888; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2658a9; }
+  background: #429cab; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8216de; }
+  background: #119168; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c772e7; }
+  background: #b14873; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #a28a74; }
+  background: #9be05d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #0a48d4; }
+  background: #742ce9; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #a805c0; }
+  background: #6188ad; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #dbf6bd; }
+  background: #a3a1a6; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #7992f2; }
+  background: #2a4df7; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #75c8b7; }
+  background: #990540; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #b5b988; }
+  background: #594be3; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #2e2526; }
+  background: #6f818b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #34156b; }
+  background: #5286d8; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #351f50; }
+  background: #e1c89f; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #d02c48; }
+  background: #a86b32; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #980c43; }
+  background: #ce39d7; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #4567fd; }
+  background: #1726cf; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a2e71d; }
+  background: #0b9c5e; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #a91a30; }
+  background: #6a80c5; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #04ca4a; }
+  background: #dc8f91; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #ca650a; }
+  background: #87ad9e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #62b616; }
+  background: #16fbc9; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a54e8a; }
+  background: #cff1ee; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f3a997; }
+  background: #70e165; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #8d9f66; }
+  background: #93175b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a5a4f5; }
+  background: #33cc68; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #cc1636; }
+  background: #d54cc3; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #05d5e9; }
+  background: #c3d14b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #821d6e; }
+  background: #faa5d1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #3a66c9; }
+  background: #bd5e43; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #b41bc9; }
+  background: #5c92f3; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #93f220; }
+  background: #49a764; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #717352; }
+  background: #871bcd; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #e68f40; }
+  background: #0693c5; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #ec6b51; }
+  background: #561d20; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #bb7c78; }
+  background: #2f2fec; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #87c231; }
+  background: #80ce7b; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #2b3c34; }
+  background: #6d041b; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #cfa8a6; }
+  background: #259ebc; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #1cfb17; }
+  background: #de26bc; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #7ac920; }
+  background: #7884a9; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #08c569; }
+  background: #230eae; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #e262af; }
+  background: #d12909; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #02617d; }
+  background: #5599e7; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ade5a1; }
+  background: #0e4be0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #f5e688; }
+  background: #62f6cc; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #c271a7; }
+  background: #9a3c54; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #f222b5; }
+  background: #5eb19a; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a13df8; }
+  background: #fe7ec5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #a2a680; }
+  background: #be741f; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #9e1bf0; }
+  background: #bd790b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #77e014; }
+  background: #e5eac7; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
